.repos/effect-tsgo/testdata/baselines/reference/effect-v4/classSelfMismatch_contextTag.errors.txt
=== Metadata ===
Effect version: 4.0.0-beta.27

/.src/classSelfMismatch_contextTag.ts(11,59): error TS377046: Self type parameter should be 'InvalidContextTag'. effect(classSelfMismatch)


==== /.src/classSelfMismatch_contextTag.ts (1 errors) ====
    import {ServiceMap} from "effect"
    
    interface ServiceShape {
      value: number
    }
    
    // valid usage: <ValidContextTag, ServiceShape> is correct because the Self type parameter is the same as the class name
    export class ValidContextTag extends ServiceMap.Service<ValidContextTag, ServiceShape>()("ValidContextTag"){}
    
    // invalid usage: <ValidContextTag, ServiceShape> should be <InvalidContextTag, ServiceShape> because the Self type parameter is not the same as the class name
    export class InvalidContextTag extends ServiceMap.Service<ValidContextTag, ServiceShape>()("InvalidContextTag"){}
                                                              ~~~~~~~~~~~~~~~
!!! error TS377046: Self type parameter should be 'InvalidContextTag'. effect(classSelfMismatch)
    
